sites/website/src/docs/2.x/api/fast-element/declarative/fast-element.md
---
id: "fast-element"
title: "fast-element "
layout: 2x-api
eleventyNavigation:
  key: "declarative.jsapi2xfast-element"
  parent: "@microsoft/fast-element/declarative.js2x"
  title: "fast-element "
navigationOptions:
  activeKey: "declarative.jsapi2xfast-element"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[@microsoft/fast-element/declarative.js](../fast-element/index.html)


## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AttributeDefinition](../fast-element.attributedefinition/)


</td><td>

An implementation of [Accessor](../fast-element.accessor/) that supports reactivity, change callbacks, attribute reflection, and type conversion for custom elements.


</td></tr>
<tr><td>

[ElementStyles](../fast-element.elementstyles/)


</td><td>

Represents styles that can be applied to a custom element.


</td></tr>
<tr><td>

[FASTElementDefinition](../fast-element.fastelementdefinition/)


</td><td>

Defines metadata for a FASTElement.


</td></tr>
<tr><td>

[HTMLView](../fast-element.htmlview/)


</td><td>

The standard View implementation, which also implements ElementView and SyntheticView.


</td></tr>
<tr><td>

[Schema](../fast-element.schema/)


</td><td>

A constructed JSON schema from a template


</td></tr>
<tr><td>

[TemplateParser](../fast-element.templateparser/)


</td><td>

Converts declarative HTML template markup into the `strings` and `values` arrays that `ViewTemplate.create()` consumes.

This class is intentionally stateless across invocations — all mutable parsing state lives on the call stack or in the `TemplateResolutionContext`<!-- -->.

The parsing pipeline is fully synchronous — no promises are allocated during template resolution.


</td></tr>
<tr><td>

[ViewTemplate](../fast-element.viewtemplate/)


</td><td>

A template capable of creating HTMLView instances or rendering directly to DOM.


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[declarativeTemplate(callbacks)](../fast-element.declarativetemplate/)


</td><td>

Returns a declarative template resolver that waits for the matching `<f-template>` element and resolves it into a concrete `ViewTemplate`<!-- -->.


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AccessCachedPath](../fast-element.accesscachedpath/)


</td><td>

A path discovered from an access expression.


</td></tr>
<tr><td>

[Accessor](../fast-element.accessor/)


</td><td>

Represents a getter/setter property accessor on an object.


</td></tr>
<tr><td>

[CachedPathCommon](../fast-element.cachedpathcommon/)


</td><td>

Common metadata for paths cached while parsing a template.


</td></tr>
<tr><td>

[CaptureType](../fast-element.capturetype/)


</td><td>

A marker interface used to capture types when interpolating Directive helpers into templates.


</td></tr>
<tr><td>

[ChildrenMap](../fast-element.childrenmap/)


</td><td>

Describes a child custom element binding referenced by a schema path.


</td></tr>
<tr><td>

[DefaultCachedPath](../fast-element.defaultcachedpath/)


</td><td>

A path discovered from a default binding.


</td></tr>
<tr><td>

[DOMPolicy](../fast-element.dompolicy/)


</td><td>

A policy that controls whether values can be written to DOM sinks.


</td></tr>
<tr><td>

[ElementView](../fast-element.elementview/)


</td><td>

A View representing DOM nodes specifically for rendering the view of a custom element.


</td></tr>
<tr><td>

[ElementViewTemplate](../fast-element.elementviewtemplate/)


</td><td>

A template capable of creating views specifically for rendering custom elements.


</td></tr>
<tr><td>

[EventCachedPath](../fast-element.eventcachedpath/)


</td><td>

A path discovered from an event binding.


</td></tr>
<tr><td>

[HTMLTemplateCompilationResult](../fast-element.htmltemplatecompilationresult/)


</td><td>

The result of a template compilation operation.


</td></tr>
<tr><td>

[JSONSchema](../fast-element.jsonschema/)


</td><td>

A JSON schema describing a root property.


</td></tr>
<tr><td>

[JSONSchemaCommon](../fast-element.jsonschemacommon/)


</td><td>

Common properties shared by schema nodes.


</td></tr>
<tr><td>

[JSONSchemaDefinition](../fast-element.jsonschemadefinition/)


</td><td>

A reusable JSON schema definition.


</td></tr>
<tr><td>

[PartialFASTElementDefinition](../fast-element.partialfastelementdefinition/)


</td><td>

Represents metadata configuration for a custom element.


</td></tr>
<tr><td>

[RegisterPathConfig](../fast-element.registerpathconfig/)


</td><td>

Configuration for registering a path with a schema.


</td></tr>
<tr><td>

[RepeatCachedPath](../fast-element.repeatcachedpath/)


</td><td>

A path discovered from a repeat directive.


</td></tr>
<tr><td>

[ResolvedStringsAndValues](../fast-element.resolvedstringsandvalues/)


</td><td>

The return type for [TemplateParser.parse()](../fast-element.templateparser.parse/)<!-- -->.


</td></tr>
<tr><td>

[ShadowRootOptions](../fast-element.shadowrootoptions/)


</td><td>

Shadow root initialization options.


</td></tr>
<tr><td>

[StyleStrategy](../fast-element.stylestrategy/)


</td><td>

Implemented to provide specific behavior when adding/removing styles for elements.


</td></tr>
<tr><td>

[StyleTarget](../fast-element.styletarget/)


</td><td>

A node that can be targeted by styles.


</td></tr>
<tr><td>

[SyntheticViewTemplate](../fast-element.syntheticviewtemplate/)


</td><td>

A template capable of rendering views not specifically connected to custom elements.


</td></tr>
<tr><td>

[TemplateLifecycleCallbacks](../fast-element.templatelifecyclecallbacks/)


</td><td>

Lifecycle callbacks for template events.


</td></tr>
<tr><td>

[ValueConverter](../fast-element.valueconverter/)


</td><td>

Represents objects that can convert values to and from view or model representations.


</td></tr>
<tr><td>

[ViewBehavior](../fast-element.viewbehavior/)


</td><td>

Represents an object that can contribute behavior to a view.


</td></tr>
<tr><td>

[ViewBehaviorFactory](../fast-element.viewbehaviorfactory/)


</td><td>

A factory that can create a [ViewBehavior](../fast-element.viewbehavior/) associated with a particular location within a DOM fragment.


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AttributeConfiguration](../fast-element.attributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior.


</td></tr>
<tr><td>

[DOMAspect](../fast-element.domaspect/)


</td><td>

The type of HTML aspect to target.


</td></tr>
<tr><td>

[DOMPolicy](../fast-element.dompolicy/)


</td><td>

A helper for creating DOM policies.


</td></tr>
<tr><td>

[schemaRegistry](../fast-element.schemaregistry/)


</td><td>

Module-level registry that maps custom element names to their schema maps. Used for cross-element `$ref` resolution (e.g. nested element schemas). Each Schema instance registers itself here on construction.


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AttributeConfiguration](../fast-element.attributeconfiguration/)


</td><td>

Metadata used to configure a custom attribute's behavior.


</td></tr>
<tr><td>

[AttributeMode](../fast-element.attributemode/)


</td><td>

The mode that specifies the runtime behavior of the attribute.


</td></tr>
<tr><td>

[CachedPath](../fast-element.cachedpath/)


</td><td>

A path discovered while parsing a template.


</td></tr>
<tr><td>

[CachedPathMap](../fast-element.cachedpathmap/)


</td><td>

A map from element names and root properties to JSON schemas.


</td></tr>
<tr><td>

[ComposableStyles](../fast-element.composablestyles/)


</td><td>

Represents styles that can be composed into the ShadowDOM of a custom element.


</td></tr>
<tr><td>

[Constructable](../fast-element.constructable/)


</td><td>

Represents a type which can be constructed with the new operator.


</td></tr>
<tr><td>

[ConstructibleStyleStrategy](../fast-element.constructiblestylestrategy/)


</td><td>

A type that instantiates a StyleStrategy.


</td></tr>
<tr><td>

[DOMAspect](../fast-element.domaspect/)


</td><td>

The type of HTML aspect to target.


</td></tr>
<tr><td>

[DOMAspectGuards](../fast-element.domaspectguards/)


</td><td>

Aspect-specific guards for a DOM Policy.


</td></tr>
<tr><td>

[DOMElementGuards](../fast-element.domelementguards/)


</td><td>

Element-specific guards for a DOM Policy.


</td></tr>
<tr><td>

[DOMGuards](../fast-element.domguards/)


</td><td>

Guard configuration for a DOM Policy.


</td></tr>
<tr><td>

[DOMPolicyOptions](../fast-element.dompolicyoptions/)


</td><td>

Options for creating a DOM Policy.


</td></tr>
<tr><td>

[DOMSink](../fast-element.domsink/)


</td><td>

A function used to send values to a DOM sink.


</td></tr>
<tr><td>

[DOMSinkGuards](../fast-element.domsinkguards/)


</td><td>

A specific DOM sink guard for a node aspect.


</td></tr>
<tr><td>

[FASTElementExtension](../fast-element.fastelementextension/)


</td><td>

A callback that receives a FASTElementDefinition during element registration. Extensions are invoked before the element is registered with the platform, allowing plugins to inspect or act on the resolved definition.


</td></tr>
<tr><td>

[FASTElementTemplateResolver](../fast-element.fastelementtemplateresolver/)


</td><td>

Resolves an element template from a composed definition.


</td></tr>
<tr><td>

[TemplateValue](../fast-element.templatevalue/)


</td><td>

Represents the types of values that can be interpolated into a template.


</td></tr>
<tr><td>

[TrustedTypesPolicy](../fast-element.trustedtypespolicy/)


</td><td>

A policy for use with the standard trustedTypes platform API.


</td></tr>
</tbody></table>
